--- a/SmartCorrect/index.html
+++ b/SmartCorrect/index.html
@@ -90,7 +90,7 @@
 
                 <ul class="footer-social-links list-reset">
                     <li>
-                        <a href="#">
+                        <a href="https://bit.ly/HelloDigispowerLLC">
                             <span class="screen-reader-text">Facebook</span>
                             <svg width="16" height="16" xmlns="http://www.w3.org/2000/svg">
                                 <path
@@ -101,7 +101,7 @@
                     </li>
 
                     <li>
-                        <a href="#">
+                        <a href="https://bit.ly/HelloDigispowerLLC">
                             <span class="screen-reader-text">Twitter</span>
                             <svg width="16" height="16" xmlns="http://www.w3.org/2000/svg">
                                 <path
@@ -112,7 +112,7 @@
                     </li>
 
                     <li>
-                        <a href="#">
+                        <a href="https://bit.ly/HelloDigispowerLLC">
                             <span class="screen-reader-text">Google</span>
                             <svg width="16" height="16" xmlns="http://www.w3.org/2000/svg">
                                 <path
