--- a/SmartCorrect/index.html
+++ b/SmartCorrect/index.html
@@ -123,7 +123,7 @@
                     </li>
                 </ul>
 
-                <div class="footer-copyright">&copy; 2018 - 2023 OgCorp, all rights reserved</div>
+                <div class="footer-copyright">&copy; 2018 - 2023 Digispower LLC, all rights reserved</div>
             </div>
         </div>
     </footer>
