--- a/SmartCorrect/index.html
+++ b/SmartCorrect/index.html
@@ -126,11 +126,14 @@
                 <div class="footer-copyright">&copy; 2018 - 2023 Digispower LLC, all rights reserved</div>
             </div>
         </div>
+
+        
     </footer>
     </div>
 
     <script src="dist/js/main.min.js"></script>
-
+<script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+<div class="elfsight-app-801bac4c-defa-480e-a13c-cd67ff80defb" data-elfsight-app-lazy></div>
 </body>
 
 </html>
