--- a/SmartCorrect/index.html
+++ b/SmartCorrect/index.html
@@ -38,9 +38,12 @@
                         <div class="hero-copy">
                             <h1 class="hero-title mt-0">Smart Desktop Apps</h1>
                             <p class="hero-paragraph">... Expand possibilities</p>
-                            <div class="hero-cta"><a class="button button-primary"
-                                    href="https://bit.ly/AcadHub">Get
-                                    it now</a><a class="button" href="https://forms.gle/pfMMswB12ZvdUXC88"
+                            <div class="hero-cta">
+                                <a class="button button-primary"
+                                    href="https://bit.ly/AcadHub">x64 Systems</a>
+                                  <a class="button button-primary"
+                                    href="https://bit.ly/AcadHub">x32 Systems</a>
+                                <a class="button" href="https://forms.gle/pfMMswB12ZvdUXC88"
                                     target="_blank" hidden="hidden">Get in touch</a></div>
                             <!-- <p style="font-size:x-small"> Get the <a href="https://bit.ly/GetSmartCorrect">msi packaging </a></p> -->
                         </div>
