--- a/SmartCorrect/index.html
+++ b/SmartCorrect/index.html
@@ -38,12 +38,15 @@
                         <div class="hero-copy">
                             <h1 class="hero-title mt-0">Smart Desktop Apps</h1>
                             <p class="hero-paragraph">... Expand possibilities</p>
-                            <div class="hero-cta">
+
+                             <div class="hero-cta">
                                 <a class="button button-primary"
                                     href="https://bit.ly/AcadHub">x64 Systems</a>
                                   <a class="button button-primary"
-                                    href="https://bit.ly/AcadHub">x32 Systems</a>
-                              <!-- <p style="font-size:x-small"> Get the <a href="https://bit.ly/GetSmartCorrect">msi packaging </a></p> -->
+                                    href="https://bit.ly/AcadHub">x32 Systems</a><p></p>
+                                <a class="button" href="https://forms.gle/pfMMswB12ZvdUXC88"
+                                    target="_blank" hidden="hidden">Get in touch</a></div>
+                            
                         </div>
                         <div class="hero-figure anime-element">
                             <svg class="placeholder" width="528" height="396" viewBox="0 0 528 396">
