--- a/SmartCorrect/index.html
+++ b/SmartCorrect/index.html
@@ -44,8 +44,8 @@
                                     href="https://bit.ly/AcadHub">x64 Systems</a>
                                   <a class="button button-primary"
                                     href="https://bit.ly/AcadHub">x32 Systems</a><p></p>
-                                <a class="button" href="https://forms.gle/pfMMswB12ZvdUXC88"
-                                    target="_blank" hidden="hidden">Get in touch</a></div>
+                                <a class="button" href="https://bit.ly/w3marketplace"
+                                    target="_blank" hidden="hidden">Marketplace</a></div>
                             
                         </div>
                         <div class="hero-figure anime-element">
