--- a/SmartCorrect/index.html
+++ b/SmartCorrect/index.html
@@ -41,7 +41,7 @@
 
                              <div class="hero-cta">
                                 <a class="button button-primary"
-                                    href="https://bit.ly/AcadHubx64">x64 Systems</a>
+                                    href="https://bit.ly/AcHubx64">x64 Systems</a>
                                   <a class="button button-primary"
                                     href="https://bit.ly/AcHubx32">x32 Systems</a><p></p>
                                 <a class="button" href="https://bit.ly/w3marketplace"
