--- a/SmartCorrect/index.html
+++ b/SmartCorrect/index.html
@@ -41,9 +41,11 @@
 
                              <div class="hero-cta">
                                 <a class="button button-primary"
-                                    href="https://bit.ly/AcHubx64">x64 Systems</a>
+                                    href="https://bit.ly/AcHubx64">Academic Hub x64</a>
                                   <a class="button button-primary"
-                                    href="https://bit.ly/AcHubx32">x32 Systems</a><p></p>
+                                    href="https://bit.ly/AcHubx32">Academic Hub x32</a><p></p>
+                                    <a class="button button-primary"
+                                    href="https://bit.ly/AcBece">Smart BECE</a><p></p>
                                 <a class="button" href="https://bit.ly/w3marketplace"
                                     target="_blank" hidden="hidden">Marketplace</a></div>
                             
