--- a/SmartCorrect/index.html
+++ b/SmartCorrect/index.html
@@ -43,7 +43,7 @@
                                 <a class="button button-primary"
                                     href="https://bit.ly/AcHubx64">Academic Hub x64</a>
                                   <a class="button button-primary"
-                                    href="https://bit.ly/AcHubx32">Academic Hub x32</a>
+                                    href="https://bit.ly/AcHubx32">Academic Hub x32</a><p></p>
                                     <a class="button button-primary"
                                     href="https://bit.ly/AcBece">Smart BECE</a><p></p>
                                 <a class="button" href="https://bit.ly/w3marketplace"
