--- a/CECePortal/index.html
+++ b/CECePortal/index.html
@@ -34,8 +34,8 @@
     <meta property="og:site_name" content="Catholic Education Board">
 
     <title>Catholic Education Board - ePortal</title>
-    <link rel="stylesheet" href="/assets/styles/home.css">
-    <link rel="stylesheet" href="/assets/styles/media.css">
+    <link rel="stylesheet" href="/CECePortal/assets/styles/home.css">
+    <link rel="stylesheet" href="/CECePortal/assets/styles/media.css">
 </head>
 
 <body>
@@ -130,5 +130,5 @@
             </div>
         </div>
     </footer>
-    <script src="/assets/scripts/main.js" defer async></script>
+    <script src="/CECePortal/assets/scripts/main.js" defer async></script>
 </body>
