--- a/CECePortal/_registration.html
+++ b/CECePortal/_registration.html
@@ -7,7 +7,7 @@
     <title>School Registration - Catholic Education Board</title>
     <!-- <link rel="stylesheet" href="/assets/styles/style.css"> -->
     <!-- <link rel="stylesheet" href="/assets/styles/style.css"> -->
-    <link rel="stylesheet" href="/assets/styles/register.css">
+    <link rel="stylesheet" href="/CECePortal/assets/styles/register.css">
 </head>
 <!-- <header>
     <nav class="container">
