--- a/CECePortal/_registration.html
+++ b/CECePortal/_registration.html
@@ -20,7 +20,7 @@
         <!-- Left Panel -->
         <div class="left-panel unselectable">
             <a href="index.html" class="logo-link">
-                <img src="/assets/logo/logo.png" alt="CEC ePortal Logo" class="logo-image unselectable">
+                <img src="/CECePortal/assets/logo/logo.png" alt="CEC ePortal Logo" class="logo-image unselectable">
             </a>
             <h1>Examination Registration</h1>
             <h2>Welcome to the Registration Portal</h2>
