--- a/CECePortal/_login.html
+++ b/CECePortal/_login.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - CEC ePortal</title>
-    <link rel="stylesheet" href="/assets/styles/login.css">
+    <link rel="stylesheet" href="/CECePortal/assets/styles/login.css">
 </head>
 <!-- <header>
     <nav class="container">
@@ -16,7 +16,7 @@
 <body>
     <div class="login-container unselectable">
         <a href="index.html" class="logo-link unselectable">
-            <img src="/assets/logo/logo2.png" alt="CEC ePortal Logo" class="logo-image">
+            <img src="/CECePortal/assets/logo/logo2.png" alt="CEC ePortal Logo" class="logo-image">
         </a>
         <form class="login-form unselectable" action="login-process.html" method="post">
             <h2>Login</h2>
