--- a/CECePortal/index.html
+++ b/CECePortal/index.html
@@ -43,7 +43,7 @@
         <nav class="container unselectable">
             <div class="nav-wrapper unselectable">
                 <a href="index.html" class="logo-link">
-                    <img src="/assets/logo/logo2.png" alt="CEC ePortal Logo" class="logo-image unselectable">
+                    <img src="/CECePortal/assets/logo/logo2.png" alt="CEC ePortal Logo" class="logo-image unselectable">
                 </a>
                 <span class="logo unselectable">CEC ePortal</span>
                 <div class="hamburger unselectable" aria-label="Menu toggle"></div>
@@ -94,23 +94,23 @@
                     </div>
                 </div>
                 <section class="hero unselectable">
-                    <img src="/assets/images/hero.png" alt="Hero Image" class="hero-image" />
+                    <img src="/CECePortal/assets/images/hero.png" alt="Hero Image" class="hero-image" />
                     <!-- Other hero content -->
                 </section>
             </div>
             <div class="features container unselectable">
                 <div class="feature unselectable">
-                    <img src="/assets/icons/icon1.svg" alt="Feature Icon 1" aria-hidden="true" />
+                    <img src="/CECePortal/assets/icons/icon1.svg" alt="Feature Icon 1" aria-hidden="true" />
                     <h6>Register your School</h6>
                     <p>Quick and easy registration process for your school’s candidates.</p>
                 </div>
                 <div class="feature unselectable">
-                    <img src="/assets/icons/icon2.svg" alt="Feature Icon 2" aria-hidden="true" />
+                    <img src="/CECePortal/assets/icons/icon2.svg" alt="Feature Icon 2" aria-hidden="true" />
                     <h6>Manage Candidates</h6>
                     <p>Manage and edit candidate information seamlessly.</p>
                 </div>
                 <div class="feature unselectable">
-                    <img src="/assets/icons/icon3.svg" alt="Feature Icon 3" aria-hidden="true" />
+                    <img src="/CECePortal/assets/icons/icon3.svg" alt="Feature Icon 3" aria-hidden="true" />
                     <h6>Check Results</h6>
                     <p>Instant access to your candidates' results as soon as they’re published.</p>
                 </div>
