--- a/CECePortal/index.html
+++ b/CECePortal/index.html
@@ -120,9 +120,9 @@
     <footer>
         <div class="footer-content unselectable">
             <div class="footer-links unselectable">
-                <a href="/index.html">Home</a>
-                <a href="/_registration.html">Registration</a>
-                <a href="/_contact.html">Contact</a>
+                <a href="/CECePortal/index.html">Home</a>
+                <a href="/CECePortal/registration.html">Registration</a>
+                <a href="/CECePortal/contact.html">Contact</a>
             </div>
             <div class="footer-info unselectable">
                 <p>&copy; 2024 Catholic Education Board. All rights reserved.</p>
