--- a/CECePortal/enrollment.html
+++ b/CECePortal/enrollment.html
@@ -5,38 +5,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student Enrollment</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/CECePortal/assets/styles/enroll.css">
 </head>
 
 <body>
     <div class="enrollment-container">
         <header>
-            <nav class="container">
-                <a href="_home.html">
-                    <img src="logo2.png" alt="CEC ePortal" class="logo unselectable">
+            <nav class="container unselectable">
+                <a href="/CECePortal/index.html">
+                    <img src="/CECePortal/assets/logo/logo2.png" alt="CEC ePortal" class="logo unselectable">
                 </a>
             </nav>
         </header>
 
         <h2>Student Enrollment</h2>
         <form id="enrollmentForm" enctype="multipart/form-data">
-            <div class="form-group">
+            <div class="form-group unselectable">
                 <label for="surname">Surname</label>
                 <input type="text" id="surname" name="surname" required>
             </div>
-            <div class="form-group">
+            <div class="form-group unselectable">
                 <label for="firstname">First Name</label>
                 <input type="text" id="firstname" name="firstname" required>
             </div>
-            <div class="form-group">
+            <div class="form-group unselectable">
                 <label for="othername">Other Name</label>
                 <input type="text" id="othername" name="othername">
             </div>
-            <div class="form-group">
+            <div class="form-group unselectable">
                 <label for="dob">Date of Birth</label>
                 <input type="date" id="dob" name="dob" required>
             </div>
-            <div class="form-group">
+            <div class="form-group unselectable">
                 <label for="gender">Gender</label>
                 <select id="gender" name="gender" required>
                     <option value="">Select Gender</option>
@@ -44,31 +44,31 @@
                     <option value="Female">Female</option>
                 </select>
             </div>
-            <div class="form-group">
+            <div class="form-group unselectable">
                 <label for="disability">Disability</label>
                 <input type="text" id="disability" name="disability">
             </div>
-            <div class="form-group">
+            <div class="form-group unselectable">
                 <label for="state">State</label>
                 <input type="text" id="state" name="state" required>
             </div>
-            <div class="form-group">
+            <div class="form-group unselectable">
                 <label for="lga">LGA or City</label>
                 <input type="text" id="lga" name="lga" required>
             </div>
-            <div class="form-group">
+            <div class="form-group unselectable">
                 <label for="passport">Passport Photo (Max 15kb)</label>
                 <input type="file" id="passport" name="passport" accept="image/jpeg, image/jpg" required>
                 <img id="passportPreview" alt="Passport Preview"
                     style="display:none; width: 100px; height: 100px; margin-top: 10px;">
             </div>
-            <div class="form-actions">
+            <div class="form-actions unselectable">
                 <button type="submit">Submit</button>
             </div>
         </form>
     </div>
 
-    <script src="script.js"></script>
+    <script src="main.js" async defer></script>
 </body>
 
 </html>
