--- a/CECePortal/index.html
+++ b/CECePortal/index.html
@@ -126,7 +126,7 @@
             </div>
             <div class="footer-info unselectable">
                 <p>&copy; 2024 Catholic Education Board. All rights reserved.</p>
-                <p>123 Education St, City, Country</p>
+                <p>1 Catholic Education Comission Av, Nigeria</p>
             </div>
         </div>
     </footer>
