--- a/SmartCorrect/index.html
+++ b/SmartCorrect/index.html
@@ -38,17 +38,11 @@
                         <div class="hero-copy">
                             <h1 class="hero-title mt-0">Smart Desktop Apps</h1>
                             <p class="hero-paragraph">... Expand possibilities</p>
-
-                             <div class="hero-cta">
-                                <a class="button button-primary"
-                                    href="https://bit.ly/AcHubx64">Academic Hub x64</a>
-                                  <a class="button button-primary"
-                                    href="https://bit.ly/AcHubx32">Academic Hub x32</a><p></p><p></p><p></p>
-                                 <a class="button button-primary"
-                                    href="https://bit.ly/AcBece">Smart BECE x32x64</a><p></p>                                    
-                                <a class="button" href="https://bit.ly/w3marketplace"
-                                    target="_blank" hidden="hidden">Marketplace</a></div>
-                            
+                            <div class="hero-cta"><a class="button button-primary"
+                                    href="https://bit.ly/GetSmartCorrect">Get
+                                    it now</a><a class="button" href="https://forms.gle/pfMMswB12ZvdUXC88"
+                                    target="_blank" hidden="hidden">Get in touch</a></div>
+                            <!-- <p style="font-size:x-small"> Get the <a href="https://bit.ly/GetSmartCorrect">msi packaging </a></p> -->
                         </div>
                         <div class="hero-figure anime-element">
                             <svg class="placeholder" width="528" height="396" viewBox="0 0 528 396">
@@ -94,9 +88,9 @@
                     </li>
                 </ul>
 
-                <ul class="footer-social-links list-reset">                
+                <ul class="footer-social-links list-reset">
                     <li>
-                        <a href="https://bit.ly/HelloDigispowerLLC" target="_blank">
+                        <a href="#">
                             <span class="screen-reader-text">Facebook</span>
                             <svg width="16" height="16" xmlns="http://www.w3.org/2000/svg">
                                 <path
@@ -107,7 +101,7 @@
                     </li>
 
                     <li>
-                        <a href="https://bit.ly/HelloDigispowerLLC" target="_blank">
+                        <a href="#">
                             <span class="screen-reader-text">Twitter</span>
                             <svg width="16" height="16" xmlns="http://www.w3.org/2000/svg">
                                 <path
@@ -118,7 +112,7 @@
                     </li>
 
                     <li>
-                        <a href="https://bit.ly/HelloDigispowerLLC" target="_blank">
+                        <a href="#">
                             <span class="screen-reader-text">Google</span>
                             <svg width="16" height="16" xmlns="http://www.w3.org/2000/svg">
                                 <path
@@ -129,17 +123,14 @@
                     </li>
                 </ul>
 
-                <div class="footer-copyright">&copy; 2018 - 2024 Digispower LLC, all rights reserved</div>
+                <div class="footer-copyright">&copy; 2018 - 2023 OgCorp, all rights reserved</div>
             </div>
         </div>
-
-        
     </footer>
     </div>
 
     <script src="dist/js/main.min.js"></script>
-<script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
-<div class="elfsight-app-801bac4c-defa-480e-a13c-cd67ff80defb" data-elfsight-app-lazy></div>
+
 </body>
 
 </html>
