--- a/CECePortal/enrollment.html
+++ b/CECePortal/enrollment.html
@@ -67,8 +67,7 @@
             </div>
         </form>
     </div>
-
-    <script src="main.js" async defer></script>
+    <script src="/CECePortal/assets/scripts/main.js" defer async></script>
 </body>
 
 </html>
