--- a/CECePortal/registration.html
+++ b/CECePortal/registration.html
@@ -42,4 +42,5 @@
             </div>
         </div>
     </div>
+    <script src="/CECePortal/assets/scripts/main.js" defer async></script>
 </body>
