--- a/CECePortal/login.html
+++ b/CECePortal/login.html
@@ -13,25 +13,28 @@
         <a href="/CECePortal/index.html" class="logo-link unselectable">
             <img src="/CECePortal/assets/logo/logo2.png" alt="CEC ePortal Logo" class="logo-image">
         </a>
-        <form class="login-form unselectable" action="login-process.html" method="post">
+        <form class="login-form unselectable" id="loginform" action="login-process.html" method="post">
             <h2>Login</h2>
             <p>Enter your credentials to access the portal.</p>
             <div class="form-group unselectable">
                 <label for="centre-number">Centre or School Number</label>
-                <input type="text" id="centre-number" name="centre-number" required>
+                <input type="text" id="centre-number" name="centre-number" required
+                    placeholder="Enter your centre or school number">
             </div>
             <div class="form-group unselectable">
                 <label for="email">Email</label>
-                <input type="email" id="email" name="email" required>
+                <input type="email" id="email" name="email" required placeholder="Enter your centre or school email">
             </div>
             <div class="form-group unselectable">
                 <label for="password">Password</label>
-                <input type="password" id="password" name="password" required>
+                <input type="password" id="password" name="password" required
+                    placeholder="Enter your centre or school password">
             </div>
             <div class="form-actions unselectable">
-                <button type="submit">Login</button>
+                <button type="submit" id="submit">Login</button>
                 <a href="/CECePortal/registration.html">Don't have an account? Register</a>
             </div>
         </form>
     </div>
+    <script src="/CECePortal/assets/scripts/main.js" defer async></script>
 </body>
