--- a/CECePortal/enrollment.html
+++ b/CECePortal/enrollment.html
@@ -46,7 +46,17 @@
             </div>
             <div class="form-group unselectable">
                 <label for="disability">Disability</label>
-                <input type="text" id="disability" name="disability">
+                <select id="disability" name="disability" required>
+                    <option value="">Select Disability</option>
+                    <option value="Normal">Normal</option>
+                    <option value="Visually Impaired">Visually Impaired</option>
+                    <option value="Hearing/Speech Impaired">Hearing/Speech Impaired</option>
+                    <option value="Physically Impaired">Physically Impaired</option>
+                    <option value="Mentally Impaired">Mentally Impaired</option>
+                    <option value="Spastic/Palsy/Epilectic Condition">Spastic/Palsy/Epilectic Condition</option>
+                    <option value="Low Vision">Low Vision</option>
+                </select>
+
             </div>
             <div class="form-group unselectable">
                 <label for="state">State</label>
