--- a/CECePortal/login.html
+++ b/CECePortal/login.html
@@ -18,7 +18,7 @@
             <p>Enter your credentials to access the portal.</p>
             <div class="form-group unselectable">
                 <label for="centre-number">Centre or School Number</label>
-                <input type="text" id="centre-number" name="centre-number" required
+                <input type="number" id="centre-number" name="centre-number" required
                     placeholder="Enter your centre or school number">
             </div>
             <div class="form-group unselectable">
