--- a/CECePortal/login.html
+++ b/CECePortal/login.html
@@ -19,16 +19,16 @@
             <div class="form-group unselectable">
                 <label for="centre-number">Centre or School Number</label>
                 <input type="number" id="centre-number" name="centre-number" required
-                    placeholder="Enter your centre or school number">
+                    placeholder="Enter your centre/school number">
             </div>
             <div class="form-group unselectable">
                 <label for="email">Email</label>
-                <input type="email" id="email" name="email" required placeholder="Enter your centre or school email">
+                <input type="email" id="email" name="email" required placeholder="Enter your centre/school email">
             </div>
             <div class="form-group unselectable">
                 <label for="password">Password</label>
                 <input type="password" id="password" name="password" required
-                    placeholder="Enter your centre or school password">
+                    placeholder="Enter your centre/school password">
             </div>
             <div class="form-actions unselectable">
                 <button type="submit" id="submit">Login</button>
