--- a/CECePortal/enrollment.html
+++ b/CECePortal/enrollment.html
@@ -73,9 +73,11 @@
                     style="display:none; width: 100px; height: 100px; margin-top: 10px;">
             </div>
             <div class="form-actions unselectable">
-                <button type="submit">Submit</button>
+                <button type="submit" id="submit">Submit</button>
             </div>
         </form>
+        <!-- Notification element -->
+        <div id="notification" class="notification"></div>
     </div>
     <script src="/CECePortal/assets/scripts/main.js" defer async></script>
 </body>
