--- a/CECePortal/login.html
+++ b/CECePortal/login.html
@@ -35,6 +35,10 @@
                 <a href="/CECePortal/registration.html">Don't have an account? Register</a>
             </div>
         </form>
+
+        <!-- Notification element -->
+        <div id="notification" class="notification"></div>
     </div>
+
     <script src="/CECePortal/assets/scripts/main.js" defer async></script>
 </body>
