--- a/CECePortal/registration.html
+++ b/CECePortal/registration.html
@@ -37,10 +37,12 @@
                 <input type="text" id="schoolNumber" name="schoolNumber" placeholder="Enter School Number">
             </div>
             <div class="form-actions">
-                <button type="button">Continue</button>
+                <button type="button" id="submit">Continue</button>
                 <a href="/CECePortal/login.html">Back to Login</a>
             </div>
         </div>
+        <!-- Notification element -->
+        <div id="notification" class="notification"></div>
     </div>
     <script src="/CECePortal/assets/scripts/main.js" defer async></script>
 </body>
