--- a/CECePortal/index.html
+++ b/CECePortal/index.html
@@ -36,6 +36,8 @@
     <title>Catholic Education Board - ePortal</title>
     <link rel="stylesheet" href="/CECePortal/assets/styles/home.css">
     <link rel="stylesheet" href="/CECePortal/assets/styles/media.css">
+    <!-- <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> -->
+
 </head>
 
 <body>
