--- a/CECePortal/login.html
+++ b/CECePortal/login.html
@@ -40,5 +40,5 @@
         <div id="notification" class="notification"></div>
     </div>
 
-    <script src="/CECePortal/assets/scripts/main.js" defer async></script>
+    <script src="/CECePortal/assets/scripts/login.js"></script>
 </body>
