--- a/CECePortal/index.html
+++ b/CECePortal/index.html
@@ -132,5 +132,5 @@
             </div>
         </div>
     </footer>
-    <script src="/CECePortal/assets/scripts/main.js" defer async></script>
+    <script src="/CECePortal/assets/scripts/main.js"></script>
 </body>
