--- a/CECePortal/registration.html
+++ b/CECePortal/registration.html
@@ -5,8 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>School Registration - Catholic Education Board</title>
-    <!-- <link rel="stylesheet" href="/CECePortal/assets/styles/style.css"> -->
-    <!-- <link rel="stylesheet" href="/CECePortal/assets/styles/style.css"> -->
     <link rel="stylesheet" href="/CECePortal/assets/styles/register.css">
 </head>
 
@@ -33,8 +31,7 @@
             <h2>School Update</h2>
             <p>Hi, to get access to your school, enter the school number and complete the form.</p>
             <div class="form-group unselectable">
-                <!-- <label for="schoolNumber">School Number</label> -->
-                <input type="text" id="schoolNumber" name="schoolNumber" placeholder="Enter School Number">
+                <input type="text" id="centreNumber" name="centreNumber" placeholder="Enter Centre/School Number">
             </div>
             <div class="form-actions">
                 <button type="button" id="submit">Continue</button>
@@ -44,5 +41,8 @@
         <!-- Notification element -->
         <div id="notification" class="notification"></div>
     </div>
-    <script src="/CECePortal/assets/scripts/main.js" defer async></script>
+    <script src="/CECePortal/assets/scripts/reg.js"></script>
+
 </body>
+
+</html>
