--- a/CECePortal/verify-centre.html
+++ b/CECePortal/verify-centre.html
@@ -31,7 +31,7 @@
             <h2>School Update</h2>
             <p>Hi, to get access to your school, enter the school number and complete the form.</p>
             <div class="form-group unselectable">
-                <input type="text" id="centreNumber" name="centreNumber" placeholder="Enter Centre/School Number">
+                <input type="number" id="centreNumber" name="centreNumber" placeholder="Enter Centre/School Number">
             </div>
             <div class="form-actions">
                 <button type="button" id="submit">Continue</button>
