--- a/CECePortal/login.html
+++ b/CECePortal/login.html
@@ -4,41 +4,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - CEC ePortal</title>
+    <title>Login - Catholic Education Board</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="/CECePortal/assets/styles/login.css">
 </head>
 
 <body>
-    <div class="login-container unselectable">
-        <a href="/CECePortal/index.html" class="logo-link unselectable">
-            <img src="/CECePortal/assets/logo/logo2.png" alt="CEC ePortal Logo" class="logo-image">
+    <div class="login-container">
+        <a href="index.html">
+            <img src="/CECePortal/assets/logo/logo2.png" alt="CEC ePortal Logo">
         </a>
-        <form class="login-form unselectable" id="loginform" action="login-process.html" method="post">
-            <h2>Login</h2>
-            <p>Enter your credentials to access the portal.</p>
-            <div class="form-group unselectable">
-                <label for="centre-number">Centre or School Number</label>
-                <input type="number" id="centre-number" name="centre-number" required
-                    placeholder="Enter your centre/school number">
+        <h2 class="text-center">Login</h2>
+        <form id="loginForm">
+            <div class="mb-3">
+                <label for="centreNumber" class="form-label">Centre/School Number</label>
+                <input type="text" class="form-control" id="centreNumber" name="centreNumber" required>
             </div>
-            <div class="form-group unselectable">
-                <label for="email">Email</label>
-                <input type="email" id="email" name="email" required placeholder="Enter your centre/school email">
+            <div class="mb-3">
+                <label for="email" class="form-label">Email</label>
+                <input type="email" class="form-control" id="email" name="email" required>
             </div>
-            <div class="form-group unselectable">
-                <label for="password">Password</label>
-                <input type="password" id="password" name="password" required
-                    placeholder="Enter your centre/school password">
+            <div class="mb-3 password-group">
+                <label for="password" class="form-label">Password</label>
+                <input type="password" class="form-control" id="password" name="password" required>
+                <span id="togglePassword" class="show-password bi bi-eye" aria-label="Show password"></span>
             </div>
-            <div class="form-actions unselectable">
-                <button type="submit" id="submit">Login</button>
-                <a href="/CECePortal/verify-centre.html">Don't have an account? Register</a>
+            <div class="form-actions">
+                <button type="submit" class="btn btn-primary">Login</button>
+                <a href="register.html" class="d-block mt-2">Register</a>
             </div>
         </form>
-
-        <!-- Notification element -->
-        <div id="notification" class="notification"></div>
     </div>
-
-    <script src="/CECePortal/assets/scripts/login.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
