--- a/CECePortal/login.html
+++ b/CECePortal/login.html
@@ -7,36 +7,50 @@
     <title>Login - Catholic Education Board</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="/CECePortal/assets/styles/login.css">
+    <link href="/CECePortal/assets/styles/login.css" rel="stylesheet">
 </head>
 
 <body>
     <div class="login-container">
-        <a href="index.html">
-            <img src="/CECePortal/assets/logo/logo2.png" alt="CEC ePortal Logo">
-        </a>
-        <h2 class="text-center">Login</h2>
-        <form id="loginForm">
-            <div class="mb-3">
-                <label for="centreNumber" class="form-label">Centre/School Number</label>
-                <input type="text" class="form-control" id="centreNumber" name="centreNumber" required>
+        <!-- Left Panel -->
+        <div class="login-left">
+            <img src="/CECePortal/assets/logo/logo.png" alt="CEC ePortal Logo">
+            <p>Welcome back to the Catholic Education Board ePortal. Please enter your login details to continue.</p>
+            <div class="login-hints">
+                <p><strong>Hints:</strong></p>
+                <p>1. Use your Centre Number as the username.</p>
+                <p>2. Make sure your password is strong.</p>
+                <p>3. Contact support if you experience any issues.</p>
             </div>
-            <div class="mb-3">
-                <label for="email" class="form-label">Email</label>
-                <input type="email" class="form-control" id="email" name="email" required>
-            </div>
-            <div class="mb-3 password-group">
-                <label for="password" class="form-label">Password</label>
-                <input type="password" class="form-control" id="password" name="password" required>
-                <span id="togglePassword" class="show-password bi bi-eye" aria-label="Show password"></span>
-            </div>
-            <div class="form-actions">
-                <button type="submit" class="btn btn-primary">Login</button>
-                <a href="register.html" class="d-block mt-2">Register</a>
-            </div>
-        </form>
+        </div>
+        <!-- Right Panel -->
+        <div class="login-right">
+            <h2>Login</h2>
+            <form id="loginForm">
+                <div class="form-group">
+                    <label for="centreNumber">Centre Number</label>
+                    <input type="text" class="form-control" id="centreNumber" name="centreNumber"
+                        placeholder="Enter Centre Number" required>
+                </div>
+                <div class="form-group password-group">
+                    <label for="password">Password</label>
+                    <input type="password" class="form-control" id="password" name="password"
+                        placeholder="Enter Password" required>
+                    <i class="bi bi-eye-slash show-password" id="togglePassword"></i>
+                </div>
+                <div class="form-actions">
+                    <button type="submit" class="btn">Login</button>
+                </div>
+            </form>
+        </div>
     </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <script>
+
+    </script>
 </body>
+
+</html>
