--- a/CECePortal/login.html
+++ b/CECePortal/login.html
@@ -12,34 +12,47 @@
 
 <body>
     <div class="login-container">
-        <!-- Left Panel -->
         <div class="login-left">
-            <img src="/CECePortal/assets/logo/logo.png" alt="CEC ePortal Logo">
-            <p>Welcome back to the Catholic Education Board ePortal. Please enter your login details to continue.</p>
-            <div class="login-hints">
-                <p><strong>Hints:</strong></p>
-                <p>1. Use your Centre Number as the username.</p>
-                <p>2. Make sure your password is strong.</p>
-                <p>3. Contact support if you experience any issues.</p>
-            </div>
+            <img src="/CECePortal/assets/logo/logo.png" alt="CEC ePortal Logo" class="logo">
+            <h2>Welcome to CEC ePortal</h2>
+            <p>Login to manage your school's exam data.</p>
+            <ul class="login-hints">
+                <li>*. View and update student records</li>
+                <li>*. Manage exam registrations</li>
+                <li>*. Access important notifications</li>
+            </ul>
         </div>
-        <!-- Right Panel -->
+
         <div class="login-right">
-            <h2>Login</h2>
+            <div class="top-icons">
+                <a href="index.html" class="house-icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                        class="bi bi-house" viewBox="0 0 16 16">
+                        <path
+                            d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L2 8.207V13.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5V8.207l.646.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293zM13 7.207V13.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V7.207l5-5z" />
+                    </svg>
+                </a>
+            </div>
             <form id="loginForm">
                 <div class="form-group">
                     <label for="centreNumber">Centre Number</label>
-                    <input type="text" class="form-control" id="centreNumber" name="centreNumber"
-                        placeholder="Enter Centre Number" required>
+                    <input type="text" id="centreNumber" name="centreNumber" required>
+                </div>
+                <div class="form-group">
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email" required>
                 </div>
                 <div class="form-group password-group">
                     <label for="password">Password</label>
-                    <input type="password" class="form-control" id="password" name="password"
-                        placeholder="Enter Password" required>
-                    <i class="bi bi-eye-slash show-password" id="togglePassword"></i>
+                    <input type="password" id="password" name="password" required>
+                    <i class="bi bi-eye" id="togglePassword"></i>
                 </div>
                 <div class="form-actions">
-                    <button type="submit" class="btn">Login</button>
+                    <button type="submit">Login</button>
+                    <div class="register-reset">
+                        <a href="register.html">Register</a>
+                        <a href="reset-password.html">Reset Password</a>
+                    </div>
                 </div>
             </form>
         </div>
@@ -48,9 +61,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-    <script>
-
-    </script>
+    <script src="/CECePortal/assets/scripts/login.js"></script>
 </body>
 
 </html>
