--- a/CECePortal/login.html
+++ b/CECePortal/login.html
@@ -19,18 +19,32 @@
             <div class="login-hints">
                 <p><strong>Hints:</strong></p>
                 <p>1. Use your Centre Number as the username.</p>
-                <p>2. Make sure your password is strong.</p>
+                <p>2. Ensure your password is strong.</p>
                 <p>3. Contact support if you experience any issues.</p>
             </div>
         </div>
         <!-- Right Panel -->
         <div class="login-right">
+            <div class="header-icons">
+                <a href="index.html" class="house-icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
+                        class="bi bi-house" viewBox="0 0 16 16">
+                        <path
+                            d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L2 8.207V13.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5V8.207l.646.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293zM13 7.207V13.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V7.207l5-5z" />
+                    </svg>
+                </a>
+            </div>
             <h2>Login</h2>
             <form id="loginForm">
                 <div class="form-group">
                     <label for="centreNumber">Centre Number</label>
                     <input type="text" class="form-control" id="centreNumber" name="centreNumber"
                         placeholder="Enter Centre Number" required>
+                </div>
+                <div class="form-group">
+                    <label for="emailAddress">Email Address</label>
+                    <input type="email" class="form-control" id="emailAddress" name="emailAddress"
+                        placeholder="Enter Email Address" required>
                 </div>
                 <div class="form-group password-group">
                     <label for="password">Password</label>
@@ -41,6 +55,11 @@
                 <div class="form-actions">
                     <button type="submit" class="btn">Login</button>
                 </div>
+                <div class="form-links">
+                    <a href="register.html">Register School</a>
+                    <span>|</span>
+                    <a href="reset-password.html">Reset Password</a>
+                </div>
             </form>
         </div>
     </div>
@@ -48,9 +67,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-    <script>
-
-    </script>
-</body>
-
+    </body>
 </html>
