--- a/CECePortal/login.html
+++ b/CECePortal/login.html
@@ -12,27 +12,34 @@
 
 <body>
     <div class="login-container">
+        <!-- Left Panel -->
         <div class="login-left">
             <img src="/CECePortal/assets/logo/logo.png" alt="CEC ePortal Logo">
             <p>Welcome back to the Catholic Education Board ePortal. Please enter your login details to continue.</p>
             <div class="login-hints">
                 <p><strong>Hints:</strong></p>
                 <p>1. Use your Centre Number as the username.</p>
-                <p>2. Make sure your password is strong.</p>
+                <p>2. Ensure your password is strong.</p>
                 <p>3. Contact support if you experience any issues.</p>
             </div>
         </div>
-
+        <!-- Right Panel -->
         <div class="login-right">
+            <div class="header-icons">
+                <a href="index.html" class="house-icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
+                        class="bi bi-house" viewBox="0 0 16 16">
+                        <path
+                            d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L2 8.207V13.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5V8.207l.646.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293zM13 7.207V13.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V7.207l5-5z" />
+                    </svg>
+                </a>
+            </div>
             <h2>Login</h2>
             <form id="loginForm">
                 <div class="form-group">
                     <label for="centreNumber">Centre Number</label>
-                    <input type="text" id="centreNumber" name="centreNumber" required>
-                </div>
-                <div class="form-group">
-                    <label for="email">Email</label>
-                    <input type="email" id="email" name="email" required>
+                    <input type="text" class="form-control" id="centreNumber" name="centreNumber"
+                        placeholder="Enter Centre Number" required>
                 </div>
                 <div class="form-group">
                     <label for="emailAddress">Email Address</label>
@@ -41,15 +48,12 @@
                 </div>
                 <div class="form-group password-group">
                     <label for="password">Password</label>
-                    <input type="password" id="password" name="password" required>
-                    <i class="bi bi-eye" id="togglePassword"></i>
+                    <input type="password" class="form-control" id="password" name="password"
+                        placeholder="Enter Password" required>
+                    <i class="bi bi-eye-slash show-password" id="togglePassword"></i>
                 </div>
                 <div class="form-actions">
-                    <button type="submit">Login</button>
-                    <div class="register-reset">
-                        <a href="register.html">Register</a>
-                        <a href="reset-password.html">Reset Password</a>
-                    </div>
+                    <button type="submit" class="btn">Login</button>
                 </div>
                 <div class="form-links">
                     <a href="register.html">Register School</a>
@@ -64,7 +68,33 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
     <script>
+        // Toggle Password Visibility
+        const togglePassword = document.getElementById('togglePassword');
+        const passwordField = document.getElementById('password');
 
+        togglePassword.addEventListener('click', function () {
+            const type = passwordField.getAttribute('type') === 'password' ? 'text' : 'password';
+            passwordField.setAttribute('type', type);
+
+            // Toggle the eye icon
+            this.classList.toggle('bi-eye');
+            this.classList.toggle('bi-eye-slash');
+        });
+
+        // Form Validation
+        document.getElementById('loginForm').addEventListener('submit', function (e) {
+            const centreNumber = document.getElementById('centreNumber').value.trim();
+            const emailAddress = document.getElementById('emailAddress').value.trim();
+            const password = document.getElementById('password').value.trim();
+
+            if (centreNumber === '' || emailAddress === '' || password === '') {
+                e.preventDefault();
+                alert('Please fill in all fields.');
+            } else if (!/^\d+$/.test(centreNumber)) {
+                e.preventDefault();
+                alert('Centre Number should only contain numeric values.');
+            }
+        });
     </script>
 </body>
 
