--- a/CECePortal/login.html
+++ b/CECePortal/login.html
@@ -56,7 +56,7 @@
                     <button type="submit" class="btn">Login</button>
                 </div>
                 <div class="form-links">
-                    <a href="register.html">Register School</a>
+                    <a href="centre-enroll.html">Register School</a>
                     <span>|</span>
                     <a href="reset-password.html">Reset Password</a>
                 </div>
@@ -67,35 +67,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-    <script>
-        // Toggle Password Visibility
-        const togglePassword = document.getElementById('togglePassword');
-        const passwordField = document.getElementById('password');
-
-        togglePassword.addEventListener('click', function () {
-            const type = passwordField.getAttribute('type') === 'password' ? 'text' : 'password';
-            passwordField.setAttribute('type', type);
-
-            // Toggle the eye icon
-            this.classList.toggle('bi-eye');
-            this.classList.toggle('bi-eye-slash');
-        });
-
-        // Form Validation
-        document.getElementById('loginForm').addEventListener('submit', function (e) {
-            const centreNumber = document.getElementById('centreNumber').value.trim();
-            const emailAddress = document.getElementById('emailAddress').value.trim();
-            const password = document.getElementById('password').value.trim();
-
-            if (centreNumber === '' || emailAddress === '' || password === '') {
-                e.preventDefault();
-                alert('Please fill in all fields.');
-            } else if (!/^\d+$/.test(centreNumber)) {
-                e.preventDefault();
-                alert('Centre Number should only contain numeric values.');
-            }
-        });
-    </script>
-</body>
+        <script src="/CECePortal/assets/scripts/login.js"></script>
+  </body>
 
 </html>
