--- a/CECePortal/verify-centre.html
+++ b/CECePortal/verify-centre.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>School Registration - Catholic Education Board</title>
+    <link href="/CECePortal/assets/styles/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/CECePortal/assets/styles/verifycentre.css">
 </head>
 
@@ -41,6 +42,7 @@
         <!-- Notification element -->
         <div id="notification" class="notification"></div>
     </div>
+    <script src="/CECePortal/assets/scripts/bootstrap.bundle.min.js" defer async></script>
     <script src="/CECePortal/assets/scripts/verifycentre.js"></script>
 
 </body>
