--- a/CECePortal/index.html
+++ b/CECePortal/index.html
@@ -132,5 +132,6 @@
             </div>
         </div>
     </footer>
+    <script src="/CECePortal/assets/scripts/bootstrap.bundle.min.js" defer async></script>
     <script src="/CECePortal/assets/scripts/main.js"></script>
 </body>
