--- a/CECePortal/login.html
+++ b/CECePortal/login.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Catholic Education Board</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="/CECePortal/assets/styles/bootstrap.min.css" rel="stylesheet">
     <link href="/CECePortal/assets/styles/login.css" rel="stylesheet">
 </head>
 
@@ -56,18 +54,17 @@
                     <button type="submit" class="btn">Login</button>
                 </div>
                 <div class="form-links">
-                    <a href="centre-enroll.html">Register School</a>
+                    <a href="verify-centre.html">Register School</a>
                     <span>|</span>
                     <a href="reset-password.html">Reset Password</a>
                 </div>
             </form>
+             <!-- Notification element -->
+        <div id="notification" class="notification"></div>
         </div>
     </div>
+    <script src="/CECePortal/assets/scripts/bootstrap.bundle.min.js" defer async></script>
+    <script src="/CECePortal/assets/scripts/login.js"></script>
+</body>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-        <script src="/CECePortal/assets/scripts/login.js"></script>
-  </body>
 
-</html>
