--- a/CECePortal/enrollment.html
+++ b/CECePortal/enrollment.html
@@ -79,7 +79,7 @@
         <!-- Notification element -->
         <div id="notification" class="notification"></div>
     </div>
-    <script src="/CECePortal/assets/scripts/bootstrap.bundle.min.js" defer async></script>
+    <script src="/CECePortal/assets/scripts/bootstrap.bundle.min.js"></script>
     <script src="/CECePortal/assets/scripts/enroll.js"></script>
 </body>
 
