--- a/CECePortal/login.html
+++ b/CECePortal/login.html
@@ -63,7 +63,7 @@
         <div id="notification" class="notification"></div>
         </div>
     </div>
-    <script src="/CECePortal/assets/scripts/bootstrap.bundle.min.js" defer async></script>
+    <script src="/CECePortal/assets/scripts/bootstrap.bundle.min.js"></script>
     <script src="/CECePortal/assets/scripts/login.js"></script>
 </body>
 
