--- a/CECePortal/verify-centre.html
+++ b/CECePortal/verify-centre.html
@@ -42,7 +42,7 @@
         <!-- Notification element -->
         <div id="notification" class="notification"></div>
     </div>
-    <script src="/CECePortal/assets/scripts/bootstrap.bundle.min.js" defer async></script>
+    <script src="/CECePortal/assets/scripts/bootstrap.bundle.min.js"></script>
     <script src="/CECePortal/assets/scripts/verifycentre.js"></script>
 
 </body>
