--- a/CECePortal/enrollment.html
+++ b/CECePortal/enrollment.html
@@ -77,7 +77,7 @@
             </div>
         </form>
         <!-- Notification element -->
-        <div id="notification" class="notification"></div>
+        <div id="notification" class="notification unselectable"></div>
     </div>
     <script src="/CECePortal/assets/scripts/bootstrap.bundle.min.js"></script>
     <script src="/CECePortal/assets/scripts/enroll.js"></script>
