--- a/CECePortal/login.html
+++ b/CECePortal/login.html
@@ -16,10 +16,13 @@
             <img src="/CECePortal/assets/logo/logo.png" alt="CEC ePortal Logo">
             <p>Welcome back to the Catholic Education Board ePortal. Please enter your login details to continue.</p>
             <div class="login-hints unselectable">
-                <p><strong>Hints:</strong></p>
-                <p>1. Use your Centre Number as the username.</p>
-                <p>2. Ensure your password is strong.</p>
-                <p>3. Contact support if you experience any issues.</p>
+                <ul>
+                    <li>Update your school or center</li>
+                    <li>Manage student data</li>
+                    <li>Access exam information</li>
+                </ul>
+                <p>If you need any help, please <a href="mailto:support@cecexams.com">Contact Support</a>
+                </p>
             </div>
         </div>
         <!-- Right Panel -->
