--- a/CECePortal/registration.html
+++ b/CECePortal/registration.html
@@ -19,10 +19,11 @@
             <h2>Welcome to the Registration Portal</h2>
             <ul>
                 <li>Register your school or center</li>
-                <li>Manage student data</li>
+                <li>Start registration</li>
+                <li>Manage your candidates</li>
                 <li>Access exam information</li>
             </ul>
-            <p>If you need any help, please email us at <a href="mailto:support@cecexams.com">support@cecexams.com</a>
+            <p>If you need any help, please <a href="mailto:support@cecexams.com">Contact Support</a>
             </p>
         </div>
 
