--- a/CECePortal/registration.html
+++ b/CECePortal/registration.html
@@ -40,5 +40,7 @@
                 <a href="/CECePortal/login.html">Back to Login</a>
             </div>
         </div>
+        <!-- Notification element -->
+        <div id="notification" class="notification"></div>
     </div>
 </body>
